<resources>
    <string name="app_name">CryptoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_item_menu">Home</string>
    <string name="market_item_menu">Market</string>
    <string name="saved_item_menu">Saved</string>
    <string name="profile_menu_item">Profile</string>
    <string name="market">Market</string>
    <string name="no_item">No Item!!</string>
    <string name="search">Search…</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="watch_list">WatchList</string>
    <string name="network_lost">NETWORK LOST</string>
</resources>