<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_item"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_item_menu" />

    <item
        android:id="@+id/market_item"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
        android:title="@string/market_item_menu" />

    <item
        android:id="@+id/watch_list_item"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_save_alt_24"
        android:title="@string/saved_item_menu" />

    <item
        android:id="@+id/exit_item"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/exit" />

</menu>